
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.3-pl
====================================
- [#MODX-2342] Fixed issue where xhtml_urls setting wasnt included in build
- [#MODX-2345] Fixed issue with templates and categories in mgr not persisting
- [#MODX-2341] Fixed issue with redirect statement on login page in certain environments
- [#MODX-2343] File upload now respects upload_* extension restrictions
- [#MODX-2344] Respect context-specific filemanager_path in upload/remove actions on directory tree in mgr

MODx Revolution 2.0.2-pl (September 17, 2010)
====================================
- [#MODX-2339] Fixed issue with caching menus in mgr and multiple languages
- [#MODX-2340] Fixed issue with initial resource values reverting after a save
- [#XPDO-72] Fix invalid call to $this->manager->getPhpType() 

MODx Revolution 2.0.1-pl (September 16, 2010)
====================================
- [#MODX-2317] Add responseCode parameter to modX::sendRedirect() method
- Fixed issue with @DIRECTORY binding not postfixing base path with / before value
- Many styling enhancements, fixes for [#MODX-2264], [#MODX-2193], [#MODX-1885], [#MODX-1847]
- Fixed issue with lexicon translations for permissions dropdown in mgr
- Enhanced system settings grid to autosave without refresh, which allows for tabbing between settings via keyboard to set values
- [#MODX-2325] Updated placeholders in setup lexicons for french/german languages
- Added an editable dropdown for Permissions tab when editing an Access Policy for easier addition of Permissions
- Fixed issue where default template was overriding empty template resources
- [#MODX-2325] Updated Czech translation
- [#MODX-2329] Login page now auto-focuses on username textfield
- Add missing modCategoryClosure to create_tables script in setup